--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "firebase": "^10.12.3",
     "framer-motion": "^11.2.14",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
